# fastapi_boilerplate

./: .env.example  .gitignore  404.html  API.html  ARCHITECTURE.html  AUTHENTICATION.html  BROADCASTING.html  CLI.html  CONTRIBUTING.html  CONTRIBUTING.md  CONTROLLERS.html  DATABASE.html  DEPLOYMENT.html  DEVELOPMENT.html  Dockerfile  ENVIRONMENT.html  FILE_STORAGE.html  FastAPI_Boilerplate.postman_collection.json  FastAPI_Boilerplate.postman_environment.json  HTTP_CLIENT.html  LICENSE.html  MIDDLEWARE.html  MODELS.html  POSTMAN_SETUP.md  README.md  README_ORIGINAL.html  REDIS_USAGE.html  REQUIREMENTS.html  ROADMAP.md  SCHEMAS.html  SECURITY.html  SECURITY_AUDIT.md  SECURITY_FIXES.md  SERVICES.html  SUPPORT.html  TASK_SCHEDULING.html  artisan.py  artisan_commands.html  docker-compose.yml  index.html  (+7 more)
.github/workflows/: ci.yml
DOCS/: API.md  ARCHITECTURE.md  AUTHENTICATION.md  BROADCASTING.md  CLI.md  CONTROLLERS.md  DATABASE.md  DEPLOYMENT.md  DEVELOPMENT.md  ENVIRONMENT.md  FILE_STORAGE.md  HTTP_CLIENT.md  MIDDLEWARE.md  MODELS.md  REDIS_USAGE.md  REQUIREMENTS.md  SCHEMAS.md  SECURITY.md  SERVICES.md  SUPPORT.md  TASK_SCHEDULING.md  architecture.html  artisan_commands.md  authentication.html  cli.html  controllers.html  database.html  deployment.html  getting-started.html  index.html  index.md  middleware.html  models.html  requirements.html  schemas.html  server.py  services.html  tutorial_5min.md
DOCS/css/: style.css
DOCS/js/: main.js  theme.js
DOCS/pages/: authentication.html
DOCS/templates/: base.html
alembic/: env.py
app/: __init__.py
app/cli/: __init__.py  (+1 more)
config/: __init__.py  app.py  broadcasting.py  cache.py  celery.py  cors.py  database.py  filesystems.py  jwt.py  logging.py  mail.py  rate_limit.py  scheduler.py
routes/: __init__.py  api.py  web.py
scripts/: create_database.py
search/: search_index.json
(+59 files in other folders)
